--- a/src/css/FindAlbum.css
+++ b/src/css/FindAlbum.css
@@ -14,6 +14,9 @@
   background-size: 14px;
   box-shadow: 1px 1px 1px rgb(189, 188, 188);
 }
+
+
+
 /* album art text */
 #find-album-label {
   padding: 0;
@@ -30,6 +33,7 @@
   border-radius: 26px;
   box-shadow: 1px 1px 1px rgb(189, 190, 190);
   background-color: #f8f5f5;
+z-index: ;
 }
 
 .search-results-flex {
